@@ -1,3 +1,8 @@
+2013-09-21 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/stm8/gen.c:
+	  More efficient stack adjustment when optimizing for code size.
+
 2013-09-21 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/mcs51/gen.c (genEndFunction): applied patch 207 to fix bug 2221,
